          (Sandro Santilli)
 - #5494, Fix double-upgrade with view using st_dwithin(text, ...)
          (Sandro Santilli)
 - #5479, postgis_full_version() and postgis_gdal_version() sometimes
          warn of deprecated SRID: 2163 (Regina Obe)
 - Include elevation in output of ST_Contour when in polygonal mode (Paul Ramsey)
 - #5482, New Proj output is only available for proj 7.1+ (Regina Obe)

* Enhancements *

 - #5492, Have postgis script report presence of deprecated functions
          (Sandro Santilli)
 - #5493, Always try to drop deprecated function on upgrade
          (Sandro Santilli)

PostGIS 3.4.0
2023/08/15

This version requires PostgreSQL 12-16, GEOS 3.6 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.12+ is needed.
To take advantage of all SFCGAL featurs, SFCGAL 1.4.1+ is needed.

Many thanks to our translation teams, in particular:

Teramoto Ikuhiro (Japanese Team)
Vincent Bre (French Team)

There are 2 new ./configure switches:

 -  --disable-extension-upgrades-install, will skip installing all the extension upgrade scripts except for the ANY--currentversion. If you use this, you can install select upgrades using the postgis commandline tool
 -  --without-pgconfig, will build just the commandline tools
    raster2pgsql and shp2pgsql even if PostgreSQL is not installed

* New Features *
  - #5055, complete manual internationalization (Sandro Santilli)
  - #5052, target version support in postgis_extensions_upgrade
    (Sandro Santilli)
  - #5306, expose version of GEOS at compile time (Sandro Santilli)
  - New install-extension-upgrades command in postgis script (Sandro Santilli)
  - #5257, #5261, #5277, Support changes for PostgreSQL 16 (Regina Obe)
  - #5006, GH705, ST_Transform: Support PROJ pipelines (Robert Coup, Koordinates)
  - #5283, [postgis_topology] RenameTopology (Sandro Santilli)
  - #5286, [postgis_topology] RenameTopoGeometryColumn (Sandro Santilli)